# stylus-workshop-counter

./: .gitignore  Cargo.toml  README.md
scripts/: .env.example  deploy.sh  getCount.sh  increment.sh  setCount.sh  test.sh
scripts/tests/: nitro-testnode.sh  test-e2e.sh  test-unit.sh
src/: lib.rs  main.rs
tests/: integration_tests.rs
tests/abi/: mod.rs
