[package]
name = "stylus-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.6.0"

[dev-dependencies]
motsu = { path = "../motsu-local/motsu" }
motsu-proc = { path = "../motsu-local/motsu-proc" }

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"

[workspace]
